align fix

--- a/public_html/assets/css/templatemo-snapx-photography.css
+++ b/public_html/assets/css/templatemo-snapx-photography.css
@@ -2222,7 +2222,7 @@ Categories Page
 
 .testimonials .item {
   border: 1px solid #e0e0e0; 
-  padding: 60px 60px 60px 60px;
+  padding: 35px;
   border-radius: 15px;
 }
 
